2008-06-29  Vincent Torri  <doursse at users dot sf dot net>

	* configure.ac:
	* src/lib/Evil.h:
	* src/lib/Makefile.am:
	* src/lib/evil.c:
	* src/lib/pwd/Makefile.am:
	* src/lib/pwd/pwd.h:
	add langinfo and getpwuid support

	* src/lib/mman/sys/mman.h:
	* src/lib/dlfcn/dlfcn.h:
	fix comment

2008-06-11  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	add defines for vc++. Thanks to Dmitriy Mazovka

2008-06-10  Vincent Torri  <doursse at users dot sf dot net>

	* configure.ac:
	* src/lib/dlfcn/dlfcn.h:
	* src/lib/mman/sys/mman.h:
	define EFL_EVIL_MMAN_BUILD and EFL_EVIL_DLFCN_BUILD so
	that functions in Evil.h are not declared as import

	* src/lib/evil.c: (setenv), (unsetenv), (realpath),
	(evil_sockets_init), (evil_sockets_shutdown), (evil_pipe),
	(evil_tmpdir_get), (evil_homedir_get):
	rename pipe() to evil_pipe().
	set tmpdir to "Temp" and homedir to "My Documents" on WinCE

	* src/lib/Evil.h:
	define pipe() as evil_pipe(). This allow to use our pipe()
	implementation to be usedwith cegcc, as it is broken on that
	platform.
	move the defines at the end of the file

2008-06-09  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	add strdup define

	* src/lib/evil.c: (evil_tmpdir_get), (evil_homedir_get):
	include stdlib.h to define MB_CUR_MAX
	On Windows CE, tmpdir and homedir are defined as "\windows"

	* src/lib/mman/mman.c: (mmap), (munmap):
	compile the big fat hack of mmap only on Windows CE

2008-06-08  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	* src/lib/evil.c: (evil_last_error_get):
	add evil_last_error_get() function to get
	useful error string creation.

	* src/lib/dlfcn/dlfcn.c: (get_last_error), (dlopen), (dlsym),
	(dladdr):
	use UNICODE check instead of compiler checks when needed.
	use evil_last_error_get()

	* src/lib/mman/mman.c: (mmap), (munmap):
	file mapping does not work on Windows CE < 5.0.
	if it is the case, just read the file and return
	the data.